package objets and configuration/unpackaged/objects/Brand_Details__c.object
<CustomObject>
    <description>Ellen Community</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Ellen Community</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Brand Details</relationshipLabel>
        <relationshipName>Brand_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand_Category__c</fullName>
        <description>Ellen Community</description>
        <label>Brand Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Consumer Package Goods</fullName>
                </value>
                <value>
                    <fullName>Beauty</fullName>
                </value>
                <value>
                    <fullName>Alcohol</fullName>
                </value>
                <value>
                    <fullName>Apparel</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Fashion</fullName>
                </value>
                <value>
                    <fullName>QSR/Fast Food</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Food and Beverage</fullName>
                    <label>Food &amp; Beverage</label>
                </value>
                <value>
                    <fullName>Games</fullName>
                    <label>Games,Toys</label>
                </value>
                <value>
                    <fullName>Health and Wellness</fullName>
                    <label>Health &amp; Wellness</label>
                </value>
                <value>
                    <fullName>Household</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Mobile Phones</fullName>
                </value>
                <value>
                    <fullName>Packaged Foods</fullName>
                </value>
                <value>
                    <fullName>Restaurants</fullName>
                    <label>Restaurants,QSR,Fast Food</label>
                </value>
                <value>
                    <fullName>Retail</fullName>
                    <label>Retail,Apparel,Grocery</label>
                </value>
                <value>
                    <fullName>Technology / Electronics</fullName>
                </value>
                <value>
                    <fullName>Telecommunications</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Events and Ticket Brokers</fullName>
                </value>
                <value>
                    <fullName>Pharmaceutical</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>E-Commerce</fullName>
                </value>
                <value>
                    <fullName>Pet</fullName>
                </value>
                <value>
                    <fullName>Non-Profit</fullName>
                </value>
                <value>
                    <fullName>Consumer Electronics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand_Name__c</fullName>
        <description>Ellen Community</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Brand Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <description>Ellen Community</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Budget</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Ellen Community</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Brand Details</relationshipLabel>
        <relationshipName>Brand_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Ellen Community</description>
        <label>Deal</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Brand Details</relationshipLabel>
        <relationshipName>Brand_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Details_of_Marketing_Campaign__c</fullName>
        <description>Ellen Community</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Details of Marketing Campaign</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Important_things_about_Brand__c</fullName>
        <description>Ellen Community</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Important things about Brand</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Ellen Community</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Brand Details</relationshipLabel>
        <relationshipName>Brand_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Main_KPIs__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Main KPIs</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Priority_elements__c</fullName>
        <description>Ellen Community</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Priority elements</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Ellen Community</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Product</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timing_of_Integration__c</fullName>
        <description>Ellen Community</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Timing of Integration</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2_3_Key_Messages__c</fullName>
        <description>Ellen Community</description>
        <encryptionScheme>None</encryptionScheme>
        <label>2-3 Key Messages</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <label>Brand Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Brand_Name__c</columns>
        <columns>Brand_Category__c</columns>
        <columns>Lead__c</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Deal__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BD-{00000000}</displayFormat>
        <label>Brand detail #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brand Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>